--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer>
   ©2022–{{current}} by Sayo |
-  <a href="https://beian.miit.gov.cn/" target="_blank">&nbsp;鲁ICP备19061843号-2</a>
+  <a href="https://github.com/xinhao-matroid/sayo-device-web-hid" target="_blank">&nbsp;Github</a>
 </footer>
